# Carbon

./: .clang-format-ignore  .clang-tidy  .gitignore  .mxproject  CMakeLists.txt  Carbon.ioc  LICENSE  README.md  format.sh
CM4/: CMakeLists.txt  STM32H747XIHx_FLASH_CM4.ld
CM4/Core/Inc/: main.h  stm32h7xx_hal_conf.h
CM4/Core/Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c
CM4/conf/: stm32h7xx_hal_conf.h
CM4/core/include/: main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
CM4/core/src/: hsem.cpp  interrupts.c  low_level_init.cpp  main.c  main.cpp  matrix_display_spi.cpp  msp.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  uart.cpp
CM4/startup/: startup_stm32h747xihx.s
CM7/: CMakeLists.txt  STM32H747XIHx_FLASH_CM7.ld
CM7/Core/Inc/: main.h  stm32h7xx_it.h
CM7/Core/Src/: stm32h7xx_it.c
CM7/conf/: FreeRTOSConfig.h  FreeRTOSTrace.h  ffconf.h  lwipopts.h  mpconfigport.h  stm32h7xx_hal_conf.h
CM7/core/include/: FreeRTOSConfig.h  ethernetif.h  lwipopts.h  main.h  main.hpp  sd_thread.hpp  stm32h7xx_hal_conf.h
CM7/core/include/carbon/: app_ethernet.h  diag_thread.hpp  display_matrix_spi.hpp  ethernetif.h  ftp_thread.hpp  interrupts.h  main_thread.hpp  modbus_master.hpp  mp_thread.h  sd_card.h  sd_card.hpp  sd_errno.h  sd_thread.hpp  stm32h747i_discovery_sd.h  tcp_test_thread.hpp  trace.hpp  trace_thread.hpp
CM7/core/include/carbon/mp_port/: gccollect.h
CM7/core/src/: app_ethernet.c  diag_thread.cpp  ethernetif.c  ethernetif_new.c  ethernetif_old.c  ftp_thread.c  ftp_thread.cpp  hsem.cpp  interrupts.c  low_level_init.cpp  main.c  main.cpp  main_thread.cpp  matrix_display_spi.cpp  modbus_master.cpp  mp_thread.c  msp.c  netif_conf.c  sd_card.c  sd_card.cpp  sd_thread.c  sd_thread.cpp  stm32h747i_discovery_sd.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  trace.cpp  trace_thread.c  trace_thread.cpp  uart.cpp
CM7/core/src/mp_port/: gccollect.c  mpcarbon.c  mphalport.c  mpthreadport.c
CM7/core/src/mp_user_module/: mp_mod_led.cpp
CM7/startup/: startup_stm32h747xihx.s
CM7/test/src/: boot.py  main.py  main_fifo.cpp  main_hsem.cpp  main_sdram.cpp  main_thread_sd.cpp  sd_thread.c  sd_thread.cpp  sd_thread.hpp  tcp_test_thread.cpp
CubeCode/: .mxproject  CubeCode.ioc
CubeCode/CM4/Core/Inc/: main.h  stm32h7xx_it.h
CubeCode/CM4/Core/Src/: stm32h7xx_it.c
CubeCode/CM7/Core/Src/: main.c  stm32h7xx_hal_msp.c
CubeCode/STM32CubeIDE/: .project
CubeCode/STM32CubeIDE/CM4/: .cproject  .project
CubeCode/STM32CubeIDE/CM7/: .cproject  .project
STM32CubeIDE/: .project
STM32CubeIDE/CM4/: .cproject  .project
STM32CubeIDE/CM7/: .cproject  .project  STM32H747XIHX_FLASH.ld
common/cmake/: common.cmake  toolchain.cmake.sample
common/conf/: printf_config.h  stm32h747i_discovery_conf.h
common/include/: common.hpp  diag.hpp  dwt.hpp  error.hpp  fifo.hpp  fmc.hpp  hsem.hpp  irq.hpp  main_thread.hpp  mpu.hpp  pin.hpp  pool.hpp  rand.hpp  sdram.hpp  sync.hpp  systime.hpp  uart.hpp
common/include/carbon/: common.hpp  diag.hpp  diag_thread.hpp  error.hpp  fifo.hpp  function_ref.hpp  hsem.hpp  inplace_function.hpp  irq.hpp  pool.hpp  result.hpp  sdram.hpp  semaphore.hpp  shared_memory.hpp  spi.hpp  stm32h747i_discovery_bus.h  stm32h747i_discovery_sd.h  sync.hpp  systime.hpp  thread.hpp  trace_format.hpp  trace_thread.hpp
common/src/: common.cpp  diag.cpp  diag_thread.c  dwt.cpp  error.cpp  fmc.cpp  freeRTOSTrace.cpp  hsem.cpp  irq.cpp  mpu.cpp  pin.cpp  rand.c  sdram.cpp  setup_idle_task.c  shared_memory.cpp  spi.cpp  start_os.c  stm32h747i_discovery_bus.c  stm32h747i_discovery_sd.c  system_stm32h7xx_dualcore_boot_cm4_cm7.c  systime.cpp
common/src/sys/: cpp.cpp  newlib.c  oshooks.cpp  syscalls.c  sysmem.c
lib/CMSIS/: CMakeLists.txt
lib/CMSIS/device/ST/STM32H7xx/include/: stm32h7xx.h
lib/FTP/: CMakeLists.txt
lib/FTP/src/: ftp.c  ftp.h  ftp_file.c  ftp_file.h  ftp_server.c  ftp_server.h
lib/backtrace/: CMakeLists.txt  backtrace.c  backtrace.h
lib/fatfs/: CMakeLists.txt
lib/fatfs/src/: io_utils.c  io_utils.h  sd_diskio.c  sd_diskio.h
lib/freertos/: CMakeLists.txt
lib/hal/: CMakeLists.txt
lib/lwip/: CMakeLists.txt
lib/lwip/system/OS/: sys_arch.c
lib/lwip/system/arch/: cc.h
lib/micropython/: CMakeLists.txt  embed.mk  mpconfigport.h
lib/micropython/port/: carbon_mp.c  carbon_mp.h  carbon_mp_init.cpp  carbon_mp_test.c  carbon_mp_test.h  cortex_m7_get_sp.s  gccollect.c  main.c  mpcarbon.c  mpcarbon.h  mpconfigport.h  mphalport.c  mphalport.h  mptask.c  mptask.h  mpthreadport.c  mpthreadport.h
lib/micropython/port/temp/: mpconfigport_common.h  mptask.c  mpthreadport.c
lib/micropython/port/user_module/: led.c
lib/printf/: CMakeLists.txt  printf.c
misc/test_utilities/: check_file.c  generate_file.c  tcp_test.c  tcp_test_send_file.c
misc/tools/: build_all.sh  build_cm7_tests.sh  build_test.sh  clang-format-check.sh  clang-format.sh  clang-tidy.sh  etrace.sh  run-clang-tidy.py  scan-build.sh
misc/trace/: CMakeLists.txt  test.cpp
